# bicker-bot

./: .gitignore  CLAUDE.md  README.md  config.yaml.example  flake.nix  pyproject.toml
config/: policies.yaml
config/prompts/: context.md  engagement.md  hachiman.md  merry.md
docs/plans/: 2025-12-28-debug-observability-design.md  2025-12-28-debug-observability-implementation.md  2025-12-28-memory-deduplication-design.md  2025-12-28-memory-deduplication-implementation.md
scripts/: analyze_memory_similarity.py  memory_manager.py
src/bicker_bot/: __init__.py  config.py  main.py  orchestrator.py
src/bicker_bot/core/: __init__.py  bicker.py  context.py  conversation_store.py  engagement.py  gate.py  logging.py  responder.py  router.py  web.py
src/bicker_bot/debug/: __init__.py  config_loader.py  server.py
src/bicker_bot/debug/templates/: base.html  memories.html  trace_detail.html  traces.html
src/bicker_bot/debug/templates/partials/: config_modal.html  memory_results.html  replay_comparison.html
src/bicker_bot/irc/: __init__.py  client.py
src/bicker_bot/memory/: __init__.py  deduplicator.py  embeddings.py  extractor.py  selector.py  store.py
src/bicker_bot/personalities/: __init__.py  hachiman.py  merry.py
src/bicker_bot/tracing/: __init__.py  context.py  store.py
tests/: __init__.py  conftest.py  test_config.py  test_debug_config.py  test_debug_integration.py  test_debug_server.py  test_deduplication.py  test_engagement_tracing.py  test_gate.py  test_integration.py  test_memory.py  test_tracing.py  test_web.py
